--- a/cn/index.html
+++ b/cn/index.html
@@ -64,6 +64,12 @@
                 </header>
                 <ul id="main-menu" class="main-menu">
                     <li>
+                        <a href="#USDT 香港服务器" class="smooth">
+                            <i class="linecons-star"></i>
+                            <span class="title"><a title="USDT 香港服务器" href="https://www.md5host.com">USDT 香港服务器</a></span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#常用推荐" class="smooth">
                             <i class="linecons-star"></i>
                             <span class="title">常用推荐</span>
