--- a/cn/index.html
+++ b/cn/index.html
@@ -64,7 +64,7 @@
                 </header>
                 <ul id="main-menu" class="main-menu">
                     <li>
-                        <a href="#USDT 香港服务器" class="smooth">
+                        <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth">
                             <i class="linecons-star"></i>
                             <span class="title"><a title="USDT 香港服务器" href="https://www.md5host.com">USDT 香港服务器</a></span>
                         </a>
