--- a/en/index.html
+++ b/en/index.html
@@ -65,6 +65,12 @@
                 </header>
                 <ul id="main-menu" class="main-menu">
                     <li>
+                        <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth">
+                            <i class="linecons-star"></i>
+                            <span class="title"><a title="USDT 香港服务器" href="https://www.md5host.com">USDT 香港服务器</a></span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#Recommended" class="smooth">
                             <i class="linecons-star"></i>
                             <span class="title">Recommended</span>
