--- a/cn/index.html
+++ b/cn/index.html
@@ -66,7 +66,7 @@
                     <li>
                         <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth">
                             <i class="linecons-star"></i>
-                            <span class="title" title="USDT 香港服务器">USDT 香港服务器</span>
+                            <span class="title" title="USDT 香港服务器" style="color:#fff;font-weight:bold;">USDT 香港服务器</span>
                         </a>
                     </li>
                     <li>
