--- a/en/index.html
+++ b/en/index.html
@@ -67,7 +67,7 @@
                     <li>
                         <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth">
                             <i class="linecons-star"></i>
-                            <span class="title"><a title="USDT 香港服务器" href="https://www.md5host.com">USDT 香港服务器</a></span>
+                            <span class="title" title="USDT 香港服务器" style="color:#fff;font-weight:bold;">USDT 香港服务器</span>
                         </a>
                     </li>
                     <li>
