--- a/cn/index.html
+++ b/cn/index.html
@@ -63,12 +63,12 @@
                     </div>
                 </header>
                 <ul id="main-menu" class="main-menu">
-                    <li>
-                        <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth">
+                     <!-- <li> -->
+                        <a title="USDT 香港服务器" href="https://www.md5host.com" class="smooth" onclick="javascript:void(0);">
                             <i class="linecons-star"></i>
-                            <span class="title" title="USDT 香港服务器" style="color:#fff;font-weight:bold;">USDT 香港服务器</span>
+                            <a title="USDT 香港服务器" href="https://www.md5host.com" class="title" title="USDT 香港服务器" style="color:#fff;font-weight:bold;">USDT 香港服务器</a>
                         </a>
-                    </li>
+                    <!-- </li> -->
                     <li>
                         <a href="#常用推荐" class="smooth">
                             <i class="linecons-star"></i>
